tests/purs/compile_pass/hello.purs
module Test where

foo :: Int
foo = 1
