tests/purs/compile_fail/hello.purs
module Test where

foo :: Int
foo = "It's not int"
